sourceCompatibility = 1.12
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = [ "src/" ]


dependencies {

	// Libgdx
	compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
	implementation 'space.earlygrey:shapedrawer:2.1.0'
	
	// UI
	compile "com.kotcrab.vis:vis-ui:$visuiVersion"

	compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"	
	
	// Util
	compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
	compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'

	
	
	// Logging
	compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
	
	// AI
	compile "com.badlogicgames.gdx:gdx-ai:$gdxAIVersion"
}